--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.data.couchbase.auto-index=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ncs0free@gmail.com
-spring.mail.password=pldv ggfi bhnw vzzs
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
